[tool.poetry]
name = "snake-opencv"
version = "0.1.0"
description = "Snake case opencv with type annotations"
license = "Apache-2.0"
authors = ["cospectrum <severinalexeyv@gmail.com>"]
readme = "README.md"
packages = [{include = "snake_opencv"}]

[tool.poetry.dependencies]
python = "^3.8.1"
opencv-python = "^4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
